loading graphql file using inputStream
Signed-off-by: Rafael Queiroz <rafaelfqueiroz@github.com>